--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcsh 'American fiction -- 20th century'
 - !lcsh 'Short stories, American'
 - !lcc 'PS'
+- GITenberg
 tableOfContents: Hearts and Crosses -- The Ransom of Mack -- Telemachus, Friend --
   The Handbook of Hymen -- The Pimienta Pancakes -- Seats of the Haughty -- Hygeia
   at the Solito -- An Afternoon Miracle -- The Higher Abdication -- Cupid a la Carte
